ordersystem/k8s/ordersystem_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  namespace: mj
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - "server.minji2276.shop"
    secretName: minji-com-tls
  rules:
  - host: server.minji2276.shop
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ordersystem-service
            port: 
              number: 80
